--- a/src/Components/footer_section/Pricing/pricing.css
+++ b/src/Components/footer_section/Pricing/pricing.css
@@ -30,7 +30,7 @@ body {
     font-size: 4vw;
     letter-spacing: 2px;
     margin-bottom: 14px;
-    margin-top: 50px;
+    margin-top: 80px;
 }
 
 .headingHeader:hover {
